# klogpy

./: .flake8  Makefile  README.md  main.py  pyproject.toml
klogpy/: cli.py  convert.py  parser.py  syntax.py
src/: cli.py  config.py  parser.py  syntax.py
src/tests/: test_parser.py
tests/: test_parser.py
