[tool.poetry]
name = "klogpy"
version = "0.1.0"
description = "Python implementation of Klog text format"
authors = ["Nick Yu <nickyu42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
parsy = { git = "https://github.com/python-parsy/parsy", rev = "4d8a96b" }
click = "^7.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
autopep8 = "^1.5.6"
flakehell = "^0.9.0"

[tool.flakehell]
format = "colored"
show_source = true

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-W503"]
pyflakes = ["+*"]
pylint = ["+*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
