[tool.poetry]
name = "klogpy"
version = "0.1.0"
description = "Python implementation of Klog text format"
authors = ["Nick Yu <nickyu42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
parsy = { git = "https://github.com/python-parsy/parsy", rev = "4d8a96b" }
click = "^7.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flakehell = "^0.9.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.flakehell]
format = "colored"
show_source = true
max_line_length = 120

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
"flake8-*" = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-W503"]
pyflakes = ["+*"]
pylint = ["+*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
